# knowledge

./: .env.example  .gitignore  README.md  handler.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  constants.py  database.py  errors.py  logging_config.py  main.py  mcp_server.py  models.py  repository.py  schemas.py  secrets.py  service.py
infra/: app.py  cdk.json  requirements-dev.txt  requirements.txt
infra/stacks/: knowledge_stack.py
infra/tests/: test_stack.py
scripts/: init_db.py  rotate_api_token.py
tests/: conftest.py  fake_repository.py  test_api_capture.py  test_api_errors.py  test_api_logging.py  test_api_read.py  test_api_write.py  test_auth.py  test_config.py  test_database.py  test_handler.py  test_logging.py  test_mcp_streamable_http.py  test_mcp_tools.py  test_models.py  test_schemas.py  test_secrets.py
tests/unit/: test_repository.py  test_service.py
